--- a/cilla-plugin-flattr/pom.xml
+++ b/cilla-plugin-flattr/pom.xml
@@ -37,24 +37,25 @@
             <groupId>org.shredzone.cilla</groupId>
             <artifactId>cilla-service</artifactId>
             <version>0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.shredzone.cilla</groupId>
             <artifactId>cilla-web</artifactId>
             <version>0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.shredzone.flattr4j</groupId>
             <artifactId>flattr4j-core</artifactId>
             <version>${flattr4j.version}</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
