--- a/pom.xml
+++ b/pom.xml
@@ -53,9 +53,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.shredzone</groupId>
-                <artifactId>bom</artifactId>
-                <version>1.1</version>
+                <groupId>org.shredzone.cilla</groupId>
+                <artifactId>cilla-bom</artifactId>
+                <version>0.1-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
