--- a/cilla-plugin-flattr/pom.xml
+++ b/cilla-plugin-flattr/pom.xml
@@ -20,8 +20,7 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.shredzone.cilla.plugin</groupId>
@@ -35,25 +34,54 @@
     <dependencies>
         <dependency>
             <groupId>org.shredzone.cilla</groupId>
+            <artifactId>cilla-core</artifactId>
+            <version>${cilla.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.shredzone.cilla</groupId>
             <artifactId>cilla-service</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>${cilla.version}</version>
         </dependency>
         <dependency>
             <groupId>org.shredzone.cilla</groupId>
             <artifactId>cilla-web</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>${cilla.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.shredzone.commons</groupId>
+            <artifactId>commons-view</artifactId>
         </dependency>
         <dependency>
             <groupId>org.shredzone.flattr4j</groupId>
             <artifactId>flattr4j-core</artifactId>
             <version>${flattr4j.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
             <scope>provided</scope>
         </dependency>
