--- a/pom.xml
+++ b/pom.xml
@@ -23,50 +23,127 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.shredzone.cilla</groupId>
-        <artifactId>cilla</artifactId>
-        <version>0.1-SNAPSHOT</version>
-    </parent>
     <groupId>org.shredzone.cilla.plugin</groupId>
     <artifactId>cilla-plugin</artifactId>
+    <version>0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Cilla Plugin Parent</name>
-    <description>Plugins for Cilla</description>
-    <inceptionYear>2012</inceptionYear>
+    <name>Cilla Plugins</name>
+    <description>Plugins for Cilla Blog Management System</description>
     <url>http://cilla.shredzone.org</url>
-    <issueManagement>
-        <system>Redmine</system>
-        <url>http://www.shredzone.org/projects/cilla-plugin/issues</url>
-    </issueManagement>
-    <scm>
-        <connection>scm:git:git@github.com:shred/cilla-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:shred/cilla-plugin.git</developerConnection>
-        <url>scm:git:git@github.com:shred/cilla-plugin.git</url>
-    </scm>
+    <inceptionYear>2012</inceptionYear>
     <licenses>
         <license>
             <name>GNU Affero General Public License Version 3</name>
             <url>LICENSE-AGPL.txt</url>
         </license>
     </licenses>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.shredzone.cilla</groupId>
-                <artifactId>cilla-bom</artifactId>
-                <version>0.1-SNAPSHOT</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-    <properties>
-        <flattr4j.version>2.8</flattr4j.version>
-    </properties>
+    <scm>
+        <url>scm:git:git@github.com:shred/cilla-plugin.git</url>
+        <connection>scm:git:git@github.com:shred/cilla-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:shred/cilla-plugin.git</developerConnection>
+    </scm>
+    <issueManagement>
+        <system>Redmine</system>
+        <url>http://www.shredzone.org/projects/cilla-plugin/issues</url>
+    </issueManagement>
+    <developers>
+        <developer>
+            <id>shred</id>
+            <name>Richard Körber</name>
+        </developer>
+    </developers>
     <modules>
         <module>cilla-plugin-flattr</module>
         <module>cilla-plugin-sitemap</module>
         <module>cilla-plugin-social</module>
     </modules>
+    <properties>
+        <cilla.version>0.1-SNAPSHOT</cilla.version>
+        <flattr4j.version>2.8</flattr4j.version>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <optimize>true</optimize>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/.gitignore</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.4.1</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <pushChanges>false</pushChanges>
+                    <localCheckout>true</localCheckout>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.4</version>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>dependencies</report>
+                            <report>issue-tracking</report>
+                            <report>license</report>
+                            <report>summary</report>
+                            <report>project-team</report>
+                            <report>scm</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.12</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <links>
+                        <link>http://docs.oracle.com/javase/7/docs/api/</link>
+                        <link>http://docs.oracle.com/javaee/6/api/</link>
+                    </links>
+                    <charset>UTF-8</charset>
+                    <linksource>true</linksource>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.shredzone.cilla</groupId>
+                <artifactId>cilla-bom</artifactId>
+                <version>${cilla.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
