--- a/cilla-plugin-flattr/pom.xml
+++ b/cilla-plugin-flattr/pom.xml
@@ -71,6 +71,10 @@
             <groupId>org.shredzone.flattr4j</groupId>
             <artifactId>flattr4j-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.shredzone.flattr4j</groupId>
+            <artifactId>flattr4j-async</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
