--- a/cilla-plugin-bom/pom.xml
+++ b/cilla-plugin-bom/pom.xml
@@ -14,6 +14,8 @@
     <properties>
         <cilla.version>0.2-SNAPSHOT</cilla.version>
         <jumblr.version>0.0.11</jumblr.version>
+
+        <maven.site.skip>true</maven.site.skip>
     </properties>
     <dependencyManagement>
         <dependencies>
