--- a/cilla-plugin-bom/pom.xml
+++ b/cilla-plugin-bom/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <cilla.version>0.2-SNAPSHOT</cilla.version>
         <jumblr.version>0.0.11</jumblr.version>
+        <twitter4j.version>4.0.4</twitter4j.version>
 
         <maven.site.skip>true</maven.site.skip>
     </properties>
@@ -39,6 +40,11 @@
                 <groupId>com.tumblr</groupId>
                 <artifactId>jumblr</artifactId>
                 <version>${jumblr.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.twitter4j</groupId>
+                <artifactId>twitter4j-core</artifactId>
+                <version>${twitter4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
