--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <module>cilla-plugin-sitemap</module>
         <module>cilla-plugin-social</module>
         <module>cilla-plugin-tumblr</module>
+        <module>cilla-plugin-twitter</module>
     </modules>
     <build>
         <plugins>
