--- a/pom.xml
+++ b/pom.xml
@@ -59,27 +59,47 @@
         <module>cilla-plugin-tumblr</module>
         <module>cilla-plugin-twitter</module>
     </modules>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.8.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
                     <optimize>true</optimize>
+                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.1.1</version>
                 <configuration>
                     <excludes>
                         <exclude>**/.gitignore</exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.7.1</version>
+                <configuration>
+                    <outputEncoding>UTF-8</outputEncoding>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.doxia</groupId>
+                        <artifactId>doxia-module-markdown</artifactId>
+                        <version>1.8</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -92,50 +112,37 @@
                     <localCheckout>true</localCheckout>
                 </configuration>
             </plugin>
-
-            <!-- Workaround, can be removed when the bug is fixed. -->
-            <!-- See: https://issues.apache.org/jira/browse/MPIR-308 -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.8.1</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.shared</groupId>
-                        <artifactId>maven-shared-jar</artifactId>
-                        <version>1.1</version>
-                        <exclusions>
-                            <exclusion>
-                                <groupId>org.apache.bcel</groupId>
-                                <artifactId>bcel</artifactId>
-                            </exclusion>
-                        </exclusions>
-                    </dependency>
-                    <dependency>
-                        <groupId>com.google.code.findbugs</groupId>
-                        <artifactId>bcel-findbugs</artifactId>
-                        <version>6.0</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <!-- /Workaround -->
-
         </plugins>
     </build>
+    <!-- Workaround for bug MJAVADOC-449, can be removed if maven-javadoc-plugin:3.1.0 is available -->
+    <pluginRepositories>
+        <pluginRepository>
+            <id>apache.snapshots</id>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
     <reporting>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>3.0.0</version>
                 <reportSets>
                     <reportSet>
                         <reports>
-                            <report>issue-tracking</report>
-                            <report>license</report>
                             <report>summary</report>
-                            <report>project-team</report>
+                            <report>dependency-info</report>
                             <report>scm</report>
+                            <report>issue-management</report>
+                            <report>dependencies</report>
+                            <report>team</report>
+                            <report>licenses</report>
                         </reports>
                     </reportSet>
                 </reportSets>
@@ -143,20 +150,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.22.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.3</version>
+                <version>3.1.0-SNAPSHOT</version>
                 <configuration>
-                    <links>
-                        <link>http://docs.oracle.com/javase/8/docs/api/</link>
-                        <link>http://docs.oracle.com/javaee/6/api/</link>
-                    </links>
-                    <charset>UTF-8</charset>
+                    <doclint>syntax,reference</doclint>
                     <linksource>true</linksource>
-                    <additionalparam>-Xdoclint:syntax,reference</additionalparam>
+                    <locale>en</locale>
                 </configuration>
             </plugin>
         </plugins>
