--- a/cilla-plugin-bom/pom.xml
+++ b/cilla-plugin-bom/pom.xml
@@ -15,6 +15,7 @@
         <cilla.version>0.2-SNAPSHOT</cilla.version>
         <jumblr.version>0.0.13</jumblr.version>
         <twittered.version>2.3</twittered.version>
+        <mastodon4j.version>1.7.0</mastodon4j.version>
 
         <maven.site.skip>true</maven.site.skip>
     </properties>
@@ -45,6 +46,11 @@
                 <groupId>io.github.redouane59.twitter</groupId>
                 <artifactId>twittered</artifactId>
                 <version>${twittered.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.sys1yagi.mastodon4j</groupId>
+                <artifactId>mastodon4j</artifactId>
+                <version>${mastodon4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
